--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-src/lib/* linguist-generated
-src/lib/* -linguist-detectable
-src/lib/* linguist-vendored
+src/lib/** linguist-generated
+src/lib/** -linguist-detectable
+src/lib/** linguist-vendored
