--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-src/lib/* linguist-generated=true
-src/lib/* linguist-vendored=true
+src/lib/** linguist-generated=true
+src/lib/** linguist-vendored=true
+src/lib/** linguist-vendored
